# ross-core

./: .codeiumignore  .gitignore  AUTHORS.md  Cargo.toml  Makefile.toml  NOTES.md  README.md  conda-lock.yml  data_structures.py  environment.yml  full_output.txt  gened_data.py  generator.py  post_build.rs  program_scraper.py  schedulebot.py  scraper.py  test.py  test2.py  test3.py  test7.py  test_output.txt  xml_structures.py
.cargo/: config.toml
.github/workflows/: tests.yml
pysat/: pysat.py  requirements.txt
resources/: course_reqs.rs  courses.rs  credits.rs  example_program.rs  general_education.rs
resources/course_reqs/: mod.rs  stem_acct.rs  stem_arch.rs  stem_art.rs  stem_astr.rs  stem_athc.rs  stem_bioc.rs  stem_biol.rs  stem_busi.rs  stem_ceng.rs  stem_chem.rs  stem_civl.rs  stem_crim.rs  stem_csci.rs  stem_danc.rs  stem_econ.rs  stem_eeng.rs  stem_engl.rs  stem_engr.rs  stem_entr.rs  stem_eslg.rs  stem_evca.rs  stem_exsc.rs  stem_finc.rs  stem_fren.rs  stem_grbk.rs  stem_grek.rs  stem_jour.rs  stem_latn.rs  stem_math.rs  stem_mcom.rs  stem_meng.rs  stem_mgmt.rs  stem_mils.rs  stem_mktg.rs  stem_phys.rs
resources/programs/: mod.rs  prog_.rs  prog_acct.rs  prog_acct_ba.rs  prog_acctba.rs  prog_arch.rs  prog_arch_ba.rs  prog_art_ba.rs  prog_astr_bs.rs  prog_athlhc_ba.rs  prog_bio_ba.rs  prog_bio_bs.rs  prog_biochem_ba.rs  prog_biochem_bs.rs  prog_bsee.rs  prog_chem_ba.rs  prog_chem_bs.rs  prog_cheng_bs.rs  prog_cive_bs.rs  prog_classl_ba.rs  prog_classlg_ba.rs  prog_classlgh_ba.rs  prog_compsci_ba.rs  prog_compsci_bs.rs  prog_crim_ba.rs  prog_econ_ba.rs  prog_eled_ba.rs  prog_eleng_bs.rs  prog_eng_ba.rs  prog_engphys_bs.rs  prog_ength_ba.rs  prog_evca_nes_ba.rs  prog_evca_ymc_ba.rs  prog_exsci_c_ba.rs  prog_exsci_ghc_ba.rs  prog_exsci_sm_ba.rs  prog_exsci_tpeh_ba.rs  prog_fin_ba.rs  prog_fin_bank_ba.rs  prog_french_ba.rs  (+4 more)
rust_cpsat/: Cargo.toml
rust_cpsat/src/: main.rs  model.rs  model_context.rs  model_courses.rs  model_geneds.rs  model_legacy.rs  model_prereqs.rs  model_semester.rs  two_stage_schedule.rs
script_assistant/: .gitignore  Cargo.toml
script_assistant/src/: main.rs
scripts/: credit_scraper.py  gened_codes.py  generator.py  inject.py  prereqs_ast.py  program.py  scraper.py
src/: clutter_zip.rs  geneds.rs  lib.rs  load_catalogs.rs  main.rs  prereqs.rs  prereqs_cp.rs  prereqs_sat.rs  read_excel_file.rs  read_self_zip.rs  schedule.rs  schedule_sorter.rs  transparency.rs  version.rs  write_excel_file.rs
src/model/: context.rs  courses.rs  geneds.rs  legacy.rs  mod.rs  prereqs.rs  semester.rs  two_stage_schedule.rs
tests/: reasons.rs  ross.rs
