[package]
name = "ross"
version = "0.1.1"
edition = "2024"
license = "AGPL-3.0-or-later"

[profile.release]
panic = "abort"
lto = "fat"
codegen-units = 1
strip = true
opt-level = "z"

[dependencies]
serde = { version = "^1.0.219", features = ["derive"] }
anyhow = "^1.0.98"
savefile = { version = "0.18.7", features = ["derive", "serde_derive"] }
savefile-derive = "0.18.7"
umya-spreadsheet = "2.3.1"
rust_xlsxwriter = "0.89.1"
lazy_static = "1.5.0"
cp_sat = { git = "https://github.com/bc-ross/cp_sat.git", rev = "a7ed2e23176939dc61e5697693a6e326640667b2" }
