[package]
name = "rust_cpsat"
version = "0.1.0"
edition = "2024"

[dependencies]
cp_sat = { git = "https://github.com/bc-ross/cp_sat.git", rev = "a7ed2e23176939dc61e5697693a6e326640667b2" }
serde = { version = "^1.0.219", features = ["derive"] }
anyhow = "^1.0.98"
savefile = { version = "0.18.7", features = ["derive", "serde_derive"] }
savefile-derive = "0.18.7"
lazy_static = "1.5.0"
