[package]
name = "script_assistant"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "^1.0.219", features = ["derive"] }
savefile = { version = "0.18.7", features = ["derive", "serde_derive"] }
savefile-derive = "0.18.7"
anyhow = "1.0.99"
serde_json = "1.0.142"
cp_sat = { git = "https://github.com/bc-ross/cp_sat.git", rev = "a7ed2e23176939dc61e5697693a6e326640667b2" }
